package edu.fiuba.algo3.modelo;

public interface Direccion {
    void mover(Ubicacion ubicacion);
}
